--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <p style="color: green; text-align: center;"><%= notice %></p>
-  
+
   <div class="row">
     <div class="col-md-12 text-center p-3">
       <h2>Where do you work?</h2>
@@ -13,17 +13,16 @@
         <% @companies.each do |company| %>
           <div class="col-md-4">
             <div class="card mb-3 position-relative">
-              <div class="card-body d-flex align-items-center">
+              <div class="card-body d-flex flex-column align-items-center">
                 <div class="avatar">
-                  <img src="<%= company.logo %>" class="card-img-top" alt="Company Logo">
+                  <img src="<%= company.logo %>" class="card-img-top p-5" alt="Company Logo">
                 </div>
                 <div class="company-info">
-                  <h4 class="card-title"><%# company.name %></h4>
                 </div>
-              </div>
-                <div class="d-grid col-6 p-2">
-      <%= link_to "I work here", new_employee_registration_path(company_id: company.id), class: "btn btn-outline-success btn-sm" %>
-
+                <div class="mt-auto">
+                  <%= form_with(model: @employee, url: employee_registration_path(company_id: company.id)) do |form| %>
+                    <%= form.button "I work here", class: "btn btn-success" %>
+                  <% end %>
                 </div>
               </div>
             </div>
@@ -32,11 +31,10 @@
       </div>
     </div>
   </div>
+</div>
 
-  <div class="row">
-    <div class="col-md-12 text-center">
-<%= link_to "I don't see my company listed", new_company_path, class: "btn btn-secondary" %>
-
-    </div>
+<div class="row">
+  <div class="col-md-12 text-center">
+    <%= link_to "I don't see my company listed", new_company_path, class: "btn btn-secondary" %>
   </div>
 </div>
