--- a/app/views/employees/_employee.html.erb
+++ b/app/views/employees/_employee.html.erb
@@ -1,26 +1,33 @@
-<div id="<%= dom_id(employee) %>">
-  <div class="row">
-    <div class="col">
-      <div class="card">
-        <div class="card-body text-center">
-          <div class="media">
-            <%= image_tag employee.profile_picture.present? ? employee.profile_picture : "https://www.vecteezy.com/vector-art/26619142-default-avatar-profile-icon-vector-of-social-media-user-photo-image", alt: "Profile Picture", class: "rounded-circle mb-3", width: 100, height: 100 %>
-          </div>
-          <div class="media-body">
-            <h2 class="card-title mb-3">
-              Welcome, <%= employee.first_name %>!
-            </h2>
-            <p class="card-text text-muted">
-              <%= employee.time_zone %>
-            </p>
-            <p class="card-text">
-              <%= employee.role.capitalize %>
-            </p>
-            <% if @employee.manager.present? %>
-              <p class="card-text">
-                Manager: <%= employee.manager.full_name %>
+<div class="container-fluid p-3">
+  <div id="<%= dom_id(employee) %>">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-body text-center">
+            <div class="media">
+              <%= image_tag("https://cdn.pixabay.com/photo/2018/11/13/21/43/avatar-3814049_1280.png", alt: "Profile Picture", class: "rounded-circle mb-3 p-2 bg-#{badge_color(employee.status&.text)} border border-light rounded-circle", width: 100, height: 100) %>
+            </div>
+
+            <div class="media-body">
+              <h2 class="card-title">
+                <%= employee.full_name %>
+              </h2>
+              <% if employee.manager == current_employee %>
+                <%= render "subordinates", employee: @employee %>
+              <% end %>
+              <hr>
+              <p class="card-text text-muted">
+                <%= employee.time_zone %>
               </p>
-            <% end %>
+              <p class="card-text">
+                <%= employee.role.capitalize %>
+              </p>
+              <% if employee.manager.present? %>
+                <p class="card-text">
+                  Manager: <%= employee.manager.full_name %>
+                </p>
+              <% end %>
+            </div>
           </div>
         </div>
       </div>
