--- a/app/views/timesheet_entries/_form.html.erb
+++ b/app/views/timesheet_entries/_form.html.erb
@@ -1,27 +1,51 @@
-  <% if @timesheet_entry && @timesheet_entry.errors.any? %>
-  <div id="error_explanation">
-    <ul class="list-unstyled">
-      <% @timesheet_entry.errors.each do |error| %>
-        <li>
-          <div class="alert alert-danger" role="alert">
-            <%= error.full_message %>
-          </div>
-        </li>
-      <% end %>
-    </ul>
-  </div>
-<% end %>
+<div class="container-fluid p-3">
+  <div class="row justify-content-center">
+    <div class="col-md-6 align-items-center">
+      <div class="card">
+        <div class="card-body text-center">
+          <% if @timesheet_entry && @timesheet_entry.errors.any? %>
+            <div id="error_explanation">
+              <ul class="list-unstyled">
+                <% @timesheet_entry.errors.each do |error| %>
+                  <li>
+                    <div class="alert alert-danger" role="alert">
+                      <%= error.full_message %>
+                    </div>
+                  </li>
+                <% end %>
+              </ul>
+            </div>
+          <% end %>
 
-<li id="<%= dom_id(timesheet_entry) %>_form" class="list-group-item">
-  <%= form_with(model: timesheet_entry, remote: true ) do |form| %>
-    <%= form.hidden_field :employee_id, value: timesheet_entry.employee&.id %>
-    <%= form.hidden_field :pay_period_id, value: PayPeriod.last&.id %>
-    <div class="mb-3">
-      <%= form.label :started_at, class: "sr-only" %>
-      <%= form.datetime_local_field :started_at, class: "form-control" %>
-      <%= form.label :ended_at, class: "sr-only" %>
-      <%= form.datetime_local_field :ended_at, class: "form-control" %>
+          <% if @employee.timesheet_entries.any? %>
+            <% latest_entry = @employee.timesheet_entries.last %>
+            <% if latest_entry.ended_at.nil? %>
+              <p class="clock-status"><span class="badge bg-success"><i class="bi bi-check-circle-fill"></i> You are currently clocked in</span></p>
+            <% else %>
+              <p class="clock-status"><span class="badge bg-danger"><i class="bi bi-dash-circle-fill"></i> You are currently clocked out</span></p>
+            <% end %>
+          <% else %>
+            <p><%= @employee.first_name %> has no timesheet entries.</p>
+          <% end %>
+
+          <div class="mt-4">
+            <%= form_with(model: TimesheetEntry, local: false, url: timesheet_entries_path, method: :post, remote: true, id: "timesheet_entry_form") do |form| %>
+              <%= form.hidden_field :employee_id, value: @employee.id %>
+              <%= form.hidden_field :pay_period_id, value: PayPeriod.last.id %>
+
+              <% if @employee.timesheet_entries.any? && @employee.timesheet_entries.last.ended_at.nil? %>
+                <%= form.hidden_field :timesheet_entry, value: latest_entry.id %>
+                <%= form.hidden_field :started_at, value: @employee.timesheet_entries.last.started_at %>
+                <%= form.hidden_field :ended_at, value: Time.now %>
+                <%= form.submit "Clock Out", class: "btn btn-danger btn-block", id: "clock_button" %>
+              <% else %>
+                <%= form.hidden_field :started_at, value: Time.now %>
+                <%= form.submit "Clock In", class: "btn btn-success btn-block", id: "clock_button" %>
+              <% end %>
+            <% end %>
+          </div>
+        </div>
+      </div>
     </div>
-    ...
-  <% end %>
-</li>
+  </div>
+</div>
