--- a/app/views/timesheet_entries/show.html.erb
+++ b/app/views/timesheet_entries/show.html.erb
@@ -1,8 +1,33 @@
-<% @employee.timesheet_entries.group_by { |entry| entry.started_at.to_date }.each do |date, entries| %>
-  <div class="accordion-item">
-    <h5 class="accordion-header"><%= date.strftime("%A, %B %d, %Y") %></h5>
-    <% entries.sort_by(&:started_at).each do |timesheet_entry| %>
-      <%= render partial: 'timesheet_entries/form', locals: { timesheet_entry: timesheet_entry } %>
-    <% end %>
+<div class="row">
+  <div class="col-md-4">
+    <div class="card">
+      <div class="card-header">
+        Timesheet
+      </div>
+      <div class="card-body">
+        <% if @employee.timesheet_entries.any? %>
+          <% latest_entry = @employee.timesheet_entries.last %>
+          <% if latest_entry %>
+            <div class="accordion-item">
+              <h5 class="accordion-header"><%= latest_entry.started_at.strftime("%A, %B %d, %Y") %></h5>
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse<%= latest_entry.id %>" aria-expanded="false" aria-controls="collapse<%= latest_entry.id %>">
+                <%= latest_entry.started_at.strftime("%b %d %l:%M%P") %> - <%= latest_entry.ended_at ? latest_entry.ended_at.strftime("%l:%M%P") : "Present" %>
+                <span class="badge rounded-pill bg-<%= latest_entry.entry_approval_status == "approved" ? "success" : latest_entry.entry_approval_status == "submitted" ? "warning" : "danger" %> ms-2"><%= latest_entry.entry_approval_status %></span>
+              </button>
+              <div id="collapse<%= latest_entry.id %>" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">
+                  <%= render partial: 'timesheet_entries/form', locals: { timesheet_entry: latest_entry } %>
+                  <%= link_to "Delete", latest_entry, method: :destroy, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
+                </div>
+              </div>
+            </div>
+          <% end %>
+        <% else %>
+          <p><%= @employee.first_name %> has no timesheet entries.</p>
+        <% end %>
+      </div>
+    </div>
   </div>
-<% end %>
+</div>
+</div>
+</div>
