--- a/app/views/statuses/_status.html.erb
+++ b/app/views/statuses/_status.html.erb
@@ -1,7 +1,1 @@
-<div id="<%= dom_id status %>">
-  <p>
-    <strong>Text:</strong>
-    <%= status.text %>
-  </p>
-
-</div>
+<%= raw clock_status(employee) %>
