--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,40 +1,33 @@
-<div class="container">
-  <p style="color: green; text-align: center;"><%= notice %></p>
-
   <div class="row">
     <div class="col-md-12 text-center p-3">
       <h2>Where do you work?</h2>
     </div>
   </div>
 
-  <div class="row justify-content-center">
-    <div id="companies">
-      <div class="container">
-        <% @companies.each do |company| %>
-          <div class="col-md-4">
-            <div class="card mb-3 position-relative">
-              <div class="card-body d-flex flex-column align-items-center">
-                <div class="avatar">
-                  <img src="<%= company.logo %>" class="card-img-top p-5" alt="Company Logo">
-                </div>
-                <div class="company-info">
-                </div>
-                <div class="mt-auto">
-                  <%= form_with(model: @employee, url: employee_registration_path(company_id: company.id)) do |form| %>
-                    <%= form.button "I work here", class: "btn btn-success" %>
-                  <% end %>
-                </div>
-              </div>
+  <div class="row row-cols-1 row-cols-xl-3 g-3 justify-content-evenly">
+    <% @companies.each do |company| %>
+      <div class="col">
+        <div class="card mb-3 position-relative">
+          <div class="card-body d-flex flex-column align-items-center">
+            <div class="avatar">
+              <!-- Apply CSS style directly to the image element -->
+              <img src="<%= company.logo %>" style="width: 450px; height: 300px;" class="card-img-top p-5" alt="Company Logo">
+            </div>
+            <div class="company-info"></div>
+            <div class="mt-auto">
+              <%= form_with(model: @employee, url: employee_registration_path(company_id: company.id)) do |form| %>
+                <%= form.button "I work here", class: "btn btn-success" %>
+              <% end %>
             </div>
           </div>
-        <% end %>
+        </div>
       </div>
-    </div>
+    <% end %>
   </div>
-</div>
 
-<div class="row">
-  <div class="col-md-12 text-center">
-    <%= link_to "I don't see my company listed", new_company_path, class: "btn btn-secondary" %>
+  <div class="row">
+    <div class="col-lg-12 p-5 justify-content-evenly text-center">
+      <%= link_to "I don't see my company listed", new_company_path, class: "btn btn-secondary" %>
+    </div>
   </div>
 </div>
