--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,49 +1,76 @@
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+<div class="mb-3">
+  <div class="card">
+    <div class="card-body">
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "form-signup" }) do |f| %>
+        <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :first_name,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "first_name", class: 'form-control' } %>
-    <%= f.input :last_name,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "last_name", class: 'form-control' } %>
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email", class: 'form-control' } %>
-<%= f.association :company,
+        <div class="form-inputs">
+          <div class="mb-3">
+            <%= f.input :first_name,
+                  label: 'First Name',
                   required: true,
                   autofocus: true,
-                  input_html: { autocomplete: "company", class: 'form-control' },
-                  collection: Company.all.map { |c| [c.name, c.id] },
-                  prompt: "Select Company",
-                  selected: params[:company_id] %>
+                  input_html: { autocomplete: "first_name", class: 'form-control' } %>
+          </div>
+          <div class="mb-3">
+            <%= f.input :last_name,
+                  label: 'Last Name',
+                  required: true,
+                  input_html: { autocomplete: "last_name", class: 'form-control' } %>
+          </div>
+          <div class="mb-3">
+            <%= f.input :email,
+                  label: 'Email',
+                  required: true,
+                  input_html: { autocomplete: "email", class: 'form-control' } %>
+          </div>
+          <div class="mb-3">
+            <%= f.association :company,
+                        label: 'Company',
+                        required: true,
+                        collection: Company.all.map { |c| [c.name, c.id] },
+                        prompt: "Select Company",
+                        input_html: { autocomplete: "company", class: 'form-control' } %>
+          </div>
+          <div class="mb-3">
+            <%= f.collection_radio_buttons :role, [['manager', 'Manager'], ['employee', 'Employee']],
+                                     :first, :last,
+                                     label: 'Role',
+                                     required: true,
+                                     input_html: { autocomplete: "role", class: 'form-control' } %>
+          </div>
+          <div class="mb-3">
+            <%= f.input :phone_number,
+                  label: 'Phone Number',
+                  required: true,
+                  input_html: { type: 'tel', pattern: '\d{10}', title: 'Please enter a 10-digit phone number',
+                                class: 'form-control' } %>
+          </div>
+          <div class="mb-3">
+            <%= f.select :time_zone, ActiveSupport::TimeZone.us_zones.map { |tz| [tz.name, tz.name] },
+                   { prompt: 'Select Time Zone' }, { class: 'form-control', id: 'time_zone_select' } %>
+          </div>
+          <div class="mb-3">
+            <%= f.input :password,
+                  label: 'Password',
+                  required: true,
+                  hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                  input_html: { autocomplete: "new-password", class: 'form-control' } %>
+          </div>
+          <div class="mb-3">
+            <%= f.input :password_confirmation,
+                  label: 'Confirm Password',
+                  required: true,
+                  input_html: { autocomplete: "new-password", class: 'form-control' } %>
+          </div>
+        </div>
 
-    <%= f.collection_radio_buttons :role, [['manager', 'Manager'], ['employee', 'Employee']],
-                                   :first, :last,
-                                   required: true,
-                                   autofocus: true,
-                                   input_html: { autocomplete: "role", class: 'form-control' } %>
-    <%= f.input :phone_number, label: 'Phone Number', required: true, autofocus: true,
-                input_html: { type: 'tel', pattern: '\d{10}', title: 'Please enter a 10-digit phone number',
-                              class: 'form-control' } %>
-    <%= f.select :time_zone, ActiveSupport::TimeZone.us_zones.map { |tz| [tz.name, tz.name] },
-                 { prompt: 'Select Time Zone' }, { class: 'form-control', id: 'time_zone_select' } %>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password", class: 'form-control' } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password", class: 'form-control' } %>
+        <div class="form-actions">
+          <%= f.button :submit, "Sign up", class: 'btn btn-primary btn-lg' %>
+        </div>
+      <% end %>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up", input_html: { class: 'form-check-inline btn btn-success' } %>
-  </div>
-<% end %>
+</div>
 
 <%= render "devise/shared/links" %>
