--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,13 +6,15 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= render partial: "shared/cdn_assets" %>
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+
     <%= javascript_importmap_tags %>
     <%= javascript_pack_tag 'application' %>
   </head>
 
   <body>
     <%= render partial: "shared/navbar" %>
+    <%= render partial: "shared/side_bar" %>
 
     <div class="container">
       <div class="row mb-4">
@@ -27,6 +29,5 @@
         </div>
       </div>
       <%= yield %>
-      <%= link_to "Back", :back, class: "btn btn-outline-secondary" %>
-    </body>
-  </html>
+  </body>
+</html>
