--- a/app/views/shared/_side_bar.html.erb
+++ b/app/views/shared/_side_bar.html.erb
@@ -33,12 +33,8 @@
         </svg>
       <% end %>
     <% else %>
-      <%= link_to employee_session_path(@employee), class: "nav-link active" do %>
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="royalblue" class="bi bi-power" viewBox="0 0 16 16">
-          <path d="M7.5 1v7h1V1z"/>
-          <path d="M3 8.812a5 5 0 0 1 2.578-4.375l-.485-.874A6 6 0 1 0 11 3.616l-.501.865A5 5 0 1 1 3 8.812"/>
-        </svg>
-      <% end %>
-    <% end %>
-  </div> <!-- Added closing tag for <div class="app-sidebar"> -->
-</div>
+      <%= link_to "Sign In", new_employee_session_path, class: "nav-link active" %>
+    <% end %> <!-- Move this line here -->
+  </div>
+
+<!-- Added closing tag for <div class="app-sidebar"> -->
