--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -33,7 +33,7 @@
       </div>
     </div>
     <div class="svg-container text-center mt-5">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="128" height="128" id="technology" class='shadow-lg bg-body rounded p-2'>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="128" height="128" id="technology" class='p-2'>
         <g>
           <path fill="none" d="M70.7 146.3c-17.4 0-31.5 14.1-31.5 31.5s14.1 31.5 31.5 31.5 31.5-14.1 31.5-31.5-14.1-31.5-31.5-31.5zM255 41.3c-17.4 0-31.5 14.1-31.5 31.5s14.1 31.5 31.5 31.5 31.5-14.1 31.5-31.5-14.1-31.5-31.5-31.5zM440.7 146.3c-17.4 0-31.5 14.1-31.5 31.5s14.1 31.5 31.5 31.5 31.5-14.1 31.5-31.5-14.1-31.5-31.5-31.5z"></path>
           <path d="M326.5 72.8c0-39.4-32.1-71.5-71.5-71.5s-71.5 32.1-71.5 71.5c0 32.5 21.8 59.9 51.5 68.6V476c0 11 9 20 20 20s20-9 20-20V141.4c29.7-8.7 51.5-36.1 51.5-68.6zM255 104.3c-17.4 0-31.5-14.1-31.5-31.5s14.1-31.5 31.5-31.5 31.5 14.1 31.5 31.5-14.1 31.5-31.5 31.5z"></path>
