here goes nothin

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,7 +26,7 @@
           <path d="M13.73 21a2 2 0 0 1-3.46 0" /></svg>
       </button>
       <button class="profile-btn">
-        <img src=<%= current_employee&.profile_picture || "https://cdn.pixabay.com/photo/2018/11/13/21/43/avatar-3814049_1280.png"%> />
+        <img src="https://cdn.pixabay.com/photo/2018/11/13/21/43/avatar-3814049_1280.png" />
         <span><%= current_employee&.full_name || " " %></span>
       </button>
     </div>
