--- a/app/views/statuses/_status.html.erb
+++ b/app/views/statuses/_status.html.erb
@@ -1,1 +1,6 @@
-<%= raw clock_status(employee) %>
+  
+<div class="row justify-content-center">
+  <div class="col-md-6">
+    <% raw clock_status(employee) %>
+  </div>
+</div>
