--- a/app/views/requests/_form.html.erb
+++ b/app/views/requests/_form.html.erb
@@ -1,17 +1,18 @@
-<%= form_with(model: request) do |form| %>
-  <% if request.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(request.errors.count, "error") %> prohibited this request from being saved:</h2>
+<%= form_with(model: @request, url: requests_path, method: :post, local: true) do |form| %>
+  <div class="field">
+    <%= form.label :email %>
+    <%= form.email_field :email %>
+  </div>
 
-      <ul>
-        <% request.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <div class="field">
+    <%= form.label :request_body %>
+    <%= form.text_area :request_body %>
+  </div>
 
-  <div>
-    <%= form.submit %>
+  <div class="actions">
+    <%= form.submit "Submit Request" %>
   </div>
 <% end %>
+
+<%= Request.all %>
+<%= @mail %>
