--- a/app/views/shared/_side_bar.html.erb
+++ b/app/views/shared/_side_bar.html.erb
@@ -23,16 +23,24 @@
         <defs />
         <circle cx="12" cy="12" r="3" />  <path d="M19.4 15a1.65 1.65 0 00.33 1.82l.06.06a2 2 0 010 2.83 2 2 0 01-2.83 0l-.06-.06a1.65 1.65 0 00-1.82-.33 1.65 1.65 0 00-1 1.51V21a2 2 0 01-2 2 2 2 0 01-2-2v-.09A1.65 1.65 0 009 19.4a1.65 1.65 0 00-1.82.33l-.06.06a2 2 0 01-2.83 0 2 2 0 010-2.83l.06-.06a1.65 1.65 0 00.33-1.82 1.65 1.65 0 00-1.51-1H3a2 2 0 01-2-2 2 2 0 012-2h.09A1.65 1.65 0 004.6 9a1.65 1.65 0 00-.33-1.82l-.06-.06a2 2 0 010-2.83 2 2 0 012.83 0l.06.06a1.65 1.65 0 001.82.33H9a1.65 1.65 0 001-1.51V3a2 2 0 012-2 2 2 0 012 2v.09a1.65 1.65 0 001 1.51 1.65 1.65 0 001.82-.33l.06-.06a2 2 0 012.83 0 2 2 0 010 2.83l-.06.06a1.65 1.65 0 00-.33 1.82V9a1.65 1.65 0 001.51 1H21a2 2 0 012 2 2 2 0 01-2 2h-.09a1.65 1.65 0 00-1.51 1z" />
       </svg>
-    </a>
+    </a> 
 
-    <% if @employee && employee_signed_in? %>
-      <%= link_to employee_path(@employee), class: "nav-link active" do %>
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="red" class="feather feather-power" viewBox="0 0 16 16">
-          <path d="M7.5 1v7h1V1z"/>
-          <path d="M3 8.812a5 5 0 0 1 2.578-4.375l-.485-.874A6 6 0 1 0 11 3.616l-.501.865A5 5 0 1 1 3 8.812"/>
-        </svg>
+    <div>
+      <% if @employee && employee_signed_in? %>
+        <%= link_to employee_path(@employee), class: "nav-link active" do %>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="red" class="feather feather-power" viewBox="0 0 16 16">
+            <path d="M7.5 1v7h1V1z"/>
+            <path d="M3 8.812a5 5 0 0 1 2.578-4.375l-.485-.874A6 6 0 1 0 11 3.616l-.501.865A5 5 0 1 1 3 8.812"/>
+          </svg>
+        <% end %>
+      <% else %>
+        <%= link_to new_employee_session_path, class: "nav-link active" do %>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="royalblue" class="feather feather-power" viewBox="0 0 16 16">
+            <path d="M7.5 1v7h1V1z"/>
+            <path d="M3 8.812a5 5 0 0 1 2.578-4.375l-.485-.874A6 6 0 1 0 11 3.616l-.501.865A5 5 0 1 1 3 8.812"/>
+          </svg>
+        <% end %>
       <% end %>
-    <% else %>
-      <%= link_to "Sign In", new_employee_session_path, class: "nav-link active" %>
-    <% end %> <!-- Move this line here -->
+    </div>
   </div>
+  
