--- a/app/views/requests/_request.html.erb
+++ b/app/views/requests/_request.html.erb
@@ -1,5 +1,8 @@
 <div id="<%= dom_id request %>">
-<%= @request %>
-<%= request %>
+<%= @request.status %>
+<div>
+<%= @request.request_body %>
+</div>
+<%= @request.email %>
 
 </div>
