--- a/app/views/requests/_request.html.erb
+++ b/app/views/requests/_request.html.erb
@@ -1,8 +1,8 @@
 <div id="<%= dom_id request %>">
-<%= @request.status %>
+<%= request.status %>
 <div>
-<%= @request.request_body %>
+<%= request.request_body %>
 </div>
-<%= @request.email %>
+<%= request.email %>
 
 </div>
