--- a/app/views/shared/_cdn_assets.html.erb
+++ b/app/views/shared/_cdn_assets.html.erb
@@ -6,3 +6,5 @@
 
 <!-- Connect Font Awesome -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/js/all.min.js"></script>
+ <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
