--- a/app/views/employees/show.html.erb
+++ b/app/views/employees/show.html.erb
@@ -1,29 +1,39 @@
-<div class="container-fluid justify-content-space-between">
-  <h2 class="card-title mb-3 text-center">
-    Welcome, <%= @employee.first_name %>!
-  </h2>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col">
-        <%= render "employee", employee: @employee, dom_id: dom_id(@employee) %>
-      </div>
-    </div>
-
-    <%= render 'statuses/form', status: Status.new(employee_id: @employee.id) %>
-
-    <%= render 'timesheet_entries/form', timesheet_entry: @employee.last_entry %>
-
-    <%= render "timesheet_entries/timesheet_entry", timesheet_entry: @employee.timesheet_entries.last %>
-
-    <% if current_employee.manager? && current_employee.employees.present? %>
-      <div>
-        <h2 class="card-title">
-          My Employees
-        </h2>
-        <div>
-          <% current_employee.employees.each do |employee| %>
-            <%= render "employee", employee: employee %>
+<div class="container-fluid mt-5">
+  <div class="row justify-content-center">
+    <div class="col-lg-8">
+      <div class="card mb-4">
+        <div class="card-body">
+          <h2 class="card-title text-center mb-4">Welcome, <%= @employee.first_name %>!</h2>
+          <div class="row">
+            <div class="col-md-6 mb-4">
+              <%= render "employee", employee: @employee, dom_id: dom_id(@employee) %>
+            </div>
+            <div class="col-md-6 mb-4">
+              <%= render 'statuses/form', status: Status.new(employee_id: @employee.id) %>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6 mb-4">
+              <%= render 'timesheet_entries/form', timesheet_entry: @employee.last_entry %>
+            </div>
+            <div class="col-md-6 mb-4">
+              <%= render "timesheet_entries/timesheet_entry", timesheet_entry: @employee.timesheet_entries.last %>
+            </div>
+          </div>
+          <% if current_employee.manager? && current_employee.employees.present? %>
+            <div class="mb-4">
+              <h2 class="card-title mb-3">My Employees</h2>
+              <div class="row row-cols-1 row-cols-md-2 g-4">
+                <% current_employee.employees.each do |employee| %>
+                  <div class="col mb-3">
+                    <%= render "employee", employee: employee %>
+                  </div>
+                <% end %>
+              </div>
+            </div>
           <% end %>
-        <% end %>
+        </div>
       </div>
     </div>
+  </div>
+</div>
