--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -5,7 +5,7 @@
 }
 
 :root {
-  --app-container: #f3f6fd;
+  --app-container: hsla(45, 52%, 88%, 0.839);
   --main-color: #1f1c2e;
   --secondary-color: #4A4A4A;
   --link-color: #1f1c2e;
@@ -16,7 +16,7 @@
   --message-box-hover: #fafcff;
   --message-box-border: #e9ebf0;
   --more-list-bg: #fff;
-  --more-list-bg-hover:  #f6fbff;
+  --more-list-bg-hover: #f6fbff;
   --more-list-shadow: rgba(209, 209, 209, 0.4);
   --button-bg: #1f1c24;
   --search-area-bg: #fff;
@@ -28,24 +28,25 @@
   --app-container: #1f1d2b;
   --app-container: #111827;
   --main-color: #fff;
-  --secondary-color: rgba(255,255,255,.8);
+  --secondary-color: rgba(255, 255, 255, .8);
   --projects-section: #1f2937;
-  --link-color: rgba(255,255,255,.8);
+  --link-color: rgba(255, 255, 255, .8);
   --link-color-hover: rgba(195, 207, 244, 0.1);
   --link-color-active-bg: rgba(195, 207, 244, 0.2);
   --button-bg: #1f2937;
   --search-area-bg: #1f2937;
   --message-box-hover: #243244;
-  --message-box-border: rgba(255,255,255,.1);
+  --message-box-border: rgba(255, 255, 255, .1);
   --star: #ffd92c;
-  --light-font: rgba(255,255,255,.8);
+  --light-font: rgba(255, 255, 255, .8);
   --more-list-bg: #2f3142;
-  --more-list-bg-hover:  rgba(195, 207, 244, 0.1);
+  --more-list-bg-hover: rgba(195, 207, 244, 0.1);
   --more-list-shadow: rgba(195, 207, 244, 0.1);
   --message-btn: rgba(195, 207, 244, 0.1);
 }
 
-html, body {
+html,
+body {
   width: 100%;
   height: 100vh;
   margin: 0;
@@ -59,7 +60,8 @@ body {
   background-color: var(--app-container);
 }
 
-button, a {
+button,
+a {
   cursor: pointer;
 }
 
@@ -72,19 +74,23 @@ button, a {
     background-color: var(--app-container);
     transition: .2s;
     max-width: 1800px;
-    
-    button, input, optgroup, select, textarea {
+
+    button,
+    input,
+    optgroup,
+    select,
+    textarea {
       font-family: 'DM Sans', sans-serif;
     }
   }
-  
+
   &-content {
     display: flex;
     height: 100%;
-    overflow: hidden;
+    overflow: auto;
     padding: 16px 24px 24px 0;
   }
-  
+
   &-header {
     display: flex;
     justify-content: space-between;
@@ -92,27 +98,31 @@ button, a {
     width: 100%;
     padding: 16px 24px;
     position: relative;
-    
-    &-left, &-right {
+
+    &-left,
+    &-right {
       display: flex;
       align-items: center;
     }
-    
-    &-left { flex-grow: 1; } 
-    
+
+    &-left {
+      flex-grow: 1;
+    }
+
     &-right button {
-      margin-left: 10px; 
+      margin-left: 10px;
     }
   }
-  
+
   &-icon {
     width: 26px;
     height: 2px;
     border-radius: 4px;
     background-color: var(--main-color);
     position: relative;
-    
-    &:before, &:after {
+
+    &:before,
+    &:after {
       content: '';
       position: absolute;
       width: 12px;
@@ -122,11 +132,16 @@ button, a {
       left: 50%;
       transform: translatex(-50%);
     }
-    
-    &:before { top: -6px; }
-    &:after { bottom: -6px; }
+
+    &:before {
+      top: -6px;
+    }
+
+    &:after {
+      bottom: -6px;
+    }
   }
-  
+
   &-name {
     color: var(--main-color);
     margin: 0;
@@ -158,10 +173,12 @@ button, a {
   width: 100%;
   max-width: 480px;
   color: var(--light-font);
-  box-shadow: 0 2px 6px 0 rgba(136,148,171,.2),0 24px 20px -24px rgba(71,82,107,.1);
-  overflow: hidden;
-  
-  .dark & { box-shadow: none; }
+  box-shadow: 0 2px 6px 0 rgba(136, 148, 171, .2), 0 24px 20px -24px rgba(71, 82, 107, .1);
+  overflow: auto;
+
+  .dark & {
+    box-shadow: none;
+  }
 }
 
 .search-input {
@@ -173,7 +190,7 @@ button, a {
   font-size: 16px;
   background-color: var(--search-area-bg);
   color: var(--main-color);
-  
+
   &:placeholder {
     color: var(--main-color);
     opacity: .6;
@@ -212,7 +229,7 @@ button, a {
   align-items: center;
   padding-left: 12px;
   border-left: 2px solid #ddd;
-  
+
   img {
     width: 32px;
     height: 32px;
@@ -220,7 +237,7 @@ button, a {
     border-radius: 50%;
     margin-right: 4px;
   }
-  
+
   span {
     color: var(--main-color);
     font-size: 16px;
@@ -229,7 +246,7 @@ button, a {
   }
 }
 
-.page-content {
+.page-content {
   flex: 1;
   width: 100%;
 }
@@ -239,7 +256,7 @@ button, a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  
+
   &-link {
     color: var(--main-color);
     color: var(--link-color);
@@ -252,7 +269,7 @@ button, a {
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
     &:hover {
       background-color: var(--link-color-hover);
       color: var(--link-color-active);
@@ -270,25 +287,25 @@ button, a {
   background-color: var(--projects-section);
   border-radius: 32px;
   padding: 32px 32px 0 32px;
-  overflow: hidden;
+  overflow: auto;
   height: 100%;
   display: flex;
   flex-direction: column;
-  
+
   &-line {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-bottom: 32px;
   }
-  
+
   &-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 24px;
     color: var(--main-color);
-    
+
     p {
       font-size: 24px;
       line-height: 32px;
@@ -297,7 +314,7 @@ button, a {
       margin: 0;
       color: var(--main-color);
     }
-    
+
     .time {
       font-size: 20px;
     }
@@ -312,7 +329,7 @@ button, a {
   display: flex;
   flex-direction: column;
   margin-right: 16px;
-  
+
   &:not(:last-child) .status-type:after {
     content: '';
     position: absolute;
@@ -358,14 +375,14 @@ button, a {
   color: var(--main-color);
   margin-left: 8px;
   transition: .2s;
-  
+
   &.active {
     background-color: var(--link-color-active-bg);
     color: var(--link-color-active);
   }
-  
+
   &:not(.active):hover {
-    background-color:  var(--link-color-hover);
+    background-color: var(--link-color-hover);
     color: var(--link-color-active);
   }
 }
@@ -382,7 +399,7 @@ button, a {
   position: relative;
   overflow: auto;
   transition: all 300ms cubic-bezier(0.19, 1, 0.56, 1);
-  
+
   .messages-close {
     position: absolute;
     top: 12px;
@@ -393,19 +410,19 @@ button, a {
     color: var(--main-color);
     display: none;
   }
-  
+
   &.show {
     transform: translateX(0);
     opacity: 1;
     margin-left: 0;
   }
-  
+
   .projects-section-header {
     position: sticky;
     top: 0;
     z-index: 1;
     padding: 32px 24px 0 24px;
-    background-color:  var(--projects-section);
+    background-color: var(--projects-section);
   }
 }
 
@@ -415,16 +432,16 @@ button, a {
   display: flex;
   align-items: flex-start;
   width: 100%;
-  
+
   &:hover {
     background-color: var(--message-box-hover);
     border-top-color: var(--link-color-hover);
-    
-    + .message-box {
+
+    +.message-box {
       border-top-color: var(--link-color-hover);
     }
   }
-  
+
   img {
     border-radius: 50%;
     object-fit: cover;
@@ -438,13 +455,13 @@ button, a {
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  
-   .name {
+
+  .name {
     font-size: 16px;
     line-height: 24px;
     font-weight: 700;
     color: var(--main-color);
-     margin: 0;
+    margin: 0;
   }
 }
 
@@ -460,7 +477,7 @@ button, a {
     width: 0;
     height: 0;
   }
-  
+
   label {
     width: 24px;
     height: 24px;
@@ -469,18 +486,18 @@ button, a {
     align-items: center;
     cursor: pointer;
   }
-  
+
   .dark & {
     color: var(--secondary-color);
-    
-    
-    
-    input:checked + label {
+
+
+
+    input:checked+label {
       color: var(--star);
     }
   }
-  
-  input:checked + label svg {
+
+  input:checked+label svg {
     fill: var(--star);
     transition: .2s;
   }
@@ -492,7 +509,7 @@ button, a {
   margin: 8px 0;
   color: var(--secondary-color);
   opacity: .7;
-  
+
   &.time {
     text-align: right;
     margin-bottom: 0;
@@ -502,70 +519,71 @@ button, a {
 .project-boxes {
   margin: 0 -8px;
   overflow-y: auto;
-  
+
   &.jsGridView {
     display: flex;
     flex-wrap: wrap;
-    
+
     .project-box-wrapper {
       width: 33.3%;
     }
   }
-  
+
   &.jsListView {
     .project-box {
       display: flex;
       border-radius: 10px;
       position: relative;
-      > * {
+
+      >* {
         margin-right: 24px;
       }
     }
-    
+
     .more-wrapper {
       position: absolute;
       right: 16px;
       top: 16px;
     }
-    
+
     .project-box-content-header {
       order: 1;
       max-width: 120px;
     }
-    
+
     .project-box-header {
       order: 2;
     }
-    
+
     .project-box-footer {
       order: 3;
       padding-top: 0;
       flex-direction: column;
       justify-content: flex-start;
     }
-    
+
     .project-box-footer:after {
       display: none;
     }
-    
+
     .participants {
       margin-bottom: 8px;
     }
-    
+
     .project-box-content-header p {
       text-align: left;
       overflow: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
     }
-    
-    .project-box-header > span {
+
+    .project-box-header>span {
       position: absolute;
       bottom: 16px;
       left: 16px;
       font-size: 12px;
     }
-    
+
     .box-progress-wrapper {
       order: 3;
       flex: 1;
@@ -578,14 +596,14 @@ button, a {
   border-radius: 30px;
   padding: 16px;
   background-color: var(--main-color-card);
-  
+
   &-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 16px;
     color: var(--main-color);
-    
+
     span {
       color: #4A4A4A;
       opacity: .7;
@@ -593,14 +611,16 @@ button, a {
       line-height: 16px;
     }
   }
-  
+
   &-content-header {
     text-align: center;
     margin-bottom: 16px;
-    
-    p { margin: 0; }
+
+    p {
+      margin: 0;
+    }
   }
-  
+
   &-wrapper {
     padding: 8px;
     transition: .2s;
@@ -616,7 +636,7 @@ button, a {
   background-color: transparent;
   border: none;
   flex-shrink: 0;
-  
+
   /*&:after, &:before {
     content: '';
     position: absolute;
@@ -654,27 +674,25 @@ button, a {
   display: block;
   height: 4px;
   border-radius: 6px;
-  
+
   &-bar {
     width: 100%;
     height: 4px;
     border-radius: 6px;
-    overflow: hidden;
+    overflow: scroll;
     background-color: #fff;
     margin: 8px 0;
   }
-  
+
   &-header {
     font-size: 14px;
     font-weight: 700;
     line-height: 16px;
     margin: 0;
   }
-  
-  &-wrapper {
-    
-  }
-  
+
+  &-wrapper {}
+
   &-percentage {
     text-align: right;
     margin: 0;
@@ -689,11 +707,12 @@ button, a {
   justify-content: space-between;
   padding-top: 16px;
   position: relative;
-  
+
   &:after {
     content: '';
     position: absolute;
-    background-color: rgba(255,255,255,0.6);;
+    background-color: rgba(255, 255, 255, 0.6);
+    ;
     width: calc(100% + 32px);
     top: 0;
     left: -16px;
@@ -704,14 +723,14 @@ button, a {
 .participants {
   display: flex;
   align-items: center;
-  
+
   img {
     width: 20px;
     height: 20px;
     border-radius: 50%;
     overflow: hidden;
     object-fit: cover;
-    
+
     &:not(:first-child) {
       margin-left: -8px;
     }
@@ -723,7 +742,7 @@ button, a {
   height: 20px;
   border-radius: 50%;
   border: none;
-  background-color: rgba(255,255,255,0.6);
+  background-color: rgba(255, 255, 255, 0.6);
   margin-left: 6px;
   display: flex;
   justify-content: center;
@@ -732,7 +751,7 @@ button, a {
 }
 
 .days-left {
-  background-color: rgba(255,255,255,0.6);
+  background-color: rgba(255, 255, 255, 0.6);
   font-size: 12px;
   border-radius: 20px;
   flex-shrink: 0;
@@ -759,24 +778,27 @@ button, a {
   display: none;
 }
 
-@media screen and (max-width: 980px) {
+@media screen and (max-width: 320px) {
   .project-boxes.jsGridView .project-box-wrapper {
     width: 50%;
   }
-  
-  .status-number, .status-type {
+
+  .status-number,
+  .status-type {
     font-size: 14px;
   }
-  
+
   .status-type:after {
     width: 4px;
     height: 4px;
   }
-  
-  .item-status { margin-right: 0; }
+
+  .item-status {
+    margin-right: 0;
+  }
 }
 
-@media screen and (max-width: 880px) {
+@media screen and (max-width: 320px) {
   .messages-section {
     transform: translateX(100%);
     position: absolute;
@@ -785,91 +807,114 @@ button, a {
     z-index: 2;
     height: 100%;
     width: 100%;
-    
-    .messages-close { display: block; }
+
+    .messages-close {
+      display: block;
+    }
   }
-  
-  .messages-btn { display: flex; }
+
+  .messages-btn {
+    display: flex;
+  }
 }
 
-@media screen and (max-width: 720px) {
-  .app-name, .profile-btn span { display: none; }
-  
-  .add-btn, .notification-btn, .mode-switch {
+@media screen and (max-width: 320px) {
+
+  .app-name,
+  .profile-btn span {
+    display: none;
+  }
+
+  .add-btn,
+  .notification-btn,
+  .mode-switch {
     width: 20px;
     height: 20px;
-    
+
     svg {
       width: 16px;
       height: 16px;
     }
   }
-  
+
   .app-header-right button {
     margin-left: 4px;
   }
 }
 
-@media screen and (max-width: 520px) {
-  .projects-section { overflow: auto; }
-  .project-boxes { overflow-y: visible; }
-  
-  .app-sidebar, .app-icon { display: none; }
-  
-  .app-content { padding: 16px 12px 24px 12px;}
-  
-  .status-number, .status-type {
+@media screen and (max-width: 320px) {
+  .projects-section {
+    overflow: auto;
+  }
+
+  .project-boxes {
+    overflow-y: visible;
+  }
+
+  .app-sidebar,
+  .app-icon {
+    display: none;
+  }
+
+  .app-content {
+    padding: 16px 12px 24px 12px;
+  }
+
+  .status-number,
+  .status-type {
     font-size: 10px;
   }
-  
+
   .view-btn {
     width: 24px;
     height: 24px;
   }
-  
+
   .app-header {
     padding: 16px 10px;
   }
-  
+
   .search-input {
     max-width: 120px;
   }
-  
+
   .project-boxes.jsGridView .project-box-wrapper {
     width: 100%;
   }
-  
+
   .projects-section {
     padding: 24px 16px 0 16px;
   }
-  
+
   .profile-btn img {
     width: 24px;
     height: 24px;
   }
-  
+
   .app-header {
     padding: 10px;
   }
-  
+
   .projects-section-header p,
-  .projects-section-header .time{
+  .projects-section-header .time {
     font-size: 18px;
   }
-  
+
   .status-type {
     padding-right: 4px;
-    
+
     &:after {
       display: none;
     }
   }
-  
+
   .search-input {
     font-size: 14px;
   }
-  
-  .messages-btn { top: 48px; }
+
+  .messages-btn {
+    top: 48px;
+  }
 
   .box-content-header {
     font-size: 12px;
@@ -881,7 +926,7 @@ button, a {
     line-height: 16px;
   }
 
-  .project-boxes.jsListView .project-box-header > span {
+  .project-boxes.jsListView .project-box-header>span {
     font-size: 10px;
   }
 
@@ -899,12 +944,46 @@ button, a {
     text-align: center;
   }
 
-  .project-boxes.jsListView .project-box > * {
+  .project-boxes.jsListView .project-box>* {
     margin-right: 10px;
   }
 
   .project-boxes.jsListView .more-wrapper {
     right: 2px;
     top: 10px;
+  }
+}
+
+.col {
+  display: flex;
+  align-items: center; // Vertically center the content
+
+  .content-wrapper {
+    display: flex;
+    align-items: center; // Vertically center the content
+  }
+}
+
+.btn-group {
+  a {
+    text-decoration: none; // Remove underline
+    color: inherit; // Use the default color
+
+    &:hover {
+      text-decoration: none; // Remove underline on hover
+      color: inherit; // Use the default color on hover
+    }
+  }
+}
+
+.logo-link {
+  h1 {
+    text-decoration: none; // Remove underline
+    color: inherit; // Use the default color
+
+    &:hover {
+      text-decoration: none; // Remove underline on hover
+      color: inherit; // Use the default color on hover
+    }
   }
 }
