--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,44 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <!-- Include necessary meta tags, stylesheets, and scripts -->
-    <style>
-      /* CSS for the image */
-      .bottom-image {
-        text-align: center;
-        margin-top: 20px; /* Adjust as needed */
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container-lg text-center">
-      <h1>archios</h1>
-      <span class="text-muted">Clock in with a quick email.</span>
+<div class="container">
+  <div class="row text-center p-4 mt-5">
+    <div class="col-lg-12">
+      <h1 class="display-4">Archios</h1>
     </div>
-    <hr>
-    <div class="container px-2 text-center justify-content-around">
-      <div class="row gx-1 justify-content-center">
-        <div class="col">
-          <div class="p-1">
-            <div class="company-button">
-              <a href="<%= companies_path %>" class="btn btn-secondary">Sign Up</a>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="p-1">
-            <a href="<%= employee_registration_path %>" class="btn btn-secondary">Sign in</a>
-          </div>
-        </div>
+    <div class="col-lg-12">
+      <p class="lead">Streamline your timesheet management by clocking in over email.</p>
+    </div>
+  </div>
+
+  <div class="row justify-content-center p-4">
+    <div class="col-md-4 mb-4 text-center">
+      <h6 class="fw-bold">Takes less than 30 seconds.</h6>
+      <%= image_tag 'check-circle.svg' %>
+    </div>
+    <div class="col-md-4 mb-4 text-center">
+      <h6 class="fw-bold">Standardized approval flow.</h6>
+      <%= image_tag 'check-circle.svg' %>
+    </div>
+    <div class="col-md-4 mb-4 text-center">
+      <h6 class="fw-bold">Daily reminders to fill out your timesheet.</h6>
+      <%= image_tag 'check-circle.svg' %>
+    </div>
+  </div>
+
+  <hr>
+
+  <div class="row text-center">
+    <div class="col-lg-12">
+      <h2 class="display-5 mb-4">Get started now:</h2>
+    </div>
+    <div class="col-lg-12">
+      <div class="btn-group">
+        <%= link_to "Sign Up", new_employee_registration_path, class: "btn btn-success btn-lg" %>
+        <%= link_to "Sign In", new_employee_session_path, class: "btn btn-outline-secondary btn-lg" %>
       </div>
     </div>
-    <div class="svg-container text-center mt-5">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="128" height="128" id="technology" class='p-2'>
-        <g>
-          <path fill="none" d="M70.7 146.3c-17.4 0-31.5 14.1-31.5 31.5s14.1 31.5 31.5 31.5 31.5-14.1 31.5-31.5-14.1-31.5-31.5-31.5zM255 41.3c-17.4 0-31.5 14.1-31.5 31.5s14.1 31.5 31.5 31.5 31.5-14.1 31.5-31.5-14.1-31.5-31.5-31.5zM440.7 146.3c-17.4 0-31.5 14.1-31.5 31.5s14.1 31.5 31.5 31.5 31.5-14.1 31.5-31.5-14.1-31.5-31.5-31.5z"></path>
-          <path d="M326.5 72.8c0-39.4-32.1-71.5-71.5-71.5s-71.5 32.1-71.5 71.5c0 32.5 21.8 59.9 51.5 68.6V476c0 11 9 20 20 20s20-9 20-20V141.4c29.7-8.7 51.5-36.1 51.5-68.6zM255 104.3c-17.4 0-31.5-14.1-31.5-31.5s14.1-31.5 31.5-31.5 31.5 14.1 31.5 31.5-14.1 31.5-31.5 31.5z"></path>
-          <path d="M440.7 106.3c-36.1 0-66 26.9-70.8 61.7H350c-15.1 0-27.1 6.9-33.8 19.3-5.5 10.3-6.2 22.4-6.2 30.7v274c0 11 9 20 20 20s20-9 20-20V218c0-5.3.4-8.3.8-10H376c11.4 24.4 36.1 41.3 64.8 41.3 39.4 0 71.5-32.1 71.5-71.5s-32.2-71.5-71.6-71.5zm0 103c-17.4 0-31.5-14.1-31.5-31.5s14.1-31.5 31.5-31.5 31.5 14.1 31.5 31.5-14.1 31.5-31.5 31.5zM150 168h-8.5c-4.8-34.8-34.7-61.7-70.8-61.7-39.4 0-71.5 32.1-71.5 71.5s32.1 71.5 71.5 71.5c28.6 0 53.4-16.9 64.8-41.3H150c5.5 0 10 4.5 10 10v274c0 11 9 20 20 20s20-9 20-20V218c0-27.6-22.4-50-50-50zm-79.3 41.3c-17.4 0-31.5-14.1-31.5-31.5s14.1-31.5 31.5-31.5 31.5 14.1 31.5 31.5-14.1 31.5-31.5 31.5z"></path>
-        </g>
-      </svg>
-    </body>
-  </html>
+  </div>
+</div>
