--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 
   <body>
 
-    <div class="container">
+    <div class="container-fluid text-center">
       <div class="row mb-4">
         <div class="col-md-6 offset-md-3">
           <% if notice.present? %>
@@ -26,20 +26,11 @@
           <% end %>
         </div>
       </div>
-      <div class="app-container">
-        <%= render partial: "shared/navbar" %>
-        <div class="app-content">
-          <%= render partial: "shared/side_bar" %>
-          <%= yield %>
-        </div>
+      <%= render partial: "shared/navbar" %>
+      <div class="app-content container-fluid text-center">
+        <%= render partial: "shared/side_bar" %>
+        <%= yield %>
       </div>
     </div>
-  </div>
-</div>
-
-<footer>
-
-</footer>
-</div>
-</body>
+  </body>
 </html>
