--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -5,7 +5,7 @@
 }
 
 :root {
-  --app-container: hsla(45, 52%, 88%, 0.839);
+  --app-container: #F6F6F6;
   --main-color: #1f1c2e;
   --secondary-color: #4A4A4A;
   --link-color: #1f1c2e;
