--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -27,6 +27,9 @@
 
   <div class="row text-center">
     <div class="col-lg-12">
+    <% if current_employee.present? %>
+      <%= link_to "My Dashboard", employee_path(current_employee), class: "btn btn-success btn-lg" %>
+    <% else %>
       <h2 class="display-5 mb-4">Get started now:</h2>
     </div>
     <div class="col-lg-12">
@@ -35,5 +38,6 @@
         <%= link_to "Sign In", new_employee_session_path, class: "btn btn-outline-secondary btn-lg" %>
       </div>
     </div>
+    <% end %>
   </div>
 </div>
