--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="app-header">
   <div class="app-header-left">
-    <%= link_to root_path, class: "logo-link" do %>
+    <%= link_to "/", class: "logo-link" do %>
       <span class="app-name">archios</span>
     <% end %>
   </div>
