--- a/app/views/timesheet_entries/_hours_worked.html.erb
+++ b/app/views/timesheet_entries/_hours_worked.html.erb
@@ -1,9 +1,9 @@
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md">
     <h6 class="font-weight-bold">Hours Worked This Pay Period</h6>
   </div>
   <div class="row">
-    <div class="col-md-6">
+    <div class="col-md">
       <h1><%= employee.total_hours_worked.to_f %> hours</h1>
     </div>
   </div>
